--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,145 +1,2 @@
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-  <div class="mb-3">
-    <label for="username" class="form-label">Username</label>
-    <input
-      type="text"
-      class="form-control"
-      id="username"
-      formControlName="username"
-    />
-    <div
-      *ngIf="
-        loginForm.get('username')?.invalid && loginForm.get('username')?.touched
-      "
-      class="text-danger"
-    >
-      <ng-container
-        [ngTemplateOutlet]="error"
-        [ngTemplateOutletContext]="{
-          control: loginForm.get('username'),
-          error: 'required',
-          msg: '*Required'
-        }"
-      ></ng-container>
-      <ng-container
-        [ngTemplateOutlet]="error"
-        [ngTemplateOutletContext]="{
-          control: loginForm.get('username'),
-          error: 'email',
-          msg: '*Not Email'
-        }"
-      ></ng-container>
-    </div>
-  </div>
-
-  <div class="mb-3">
-    <label for="password" class="form-label">Password</label>
-    <input
-      type="password"
-      class="form-control"
-      id="password"
-      formControlName="password"
-    />
-    <div
-      *ngIf="
-        loginForm.get('password')?.invalid && loginForm.get('password')?.touched
-      "
-      class="text-danger"
-    >
-      <ng-container
-        [ngTemplateOutlet]="error"
-        [ngTemplateOutletContext]="{
-          control: loginForm.get('password'),
-          error: 'required',
-          msg: '*Required'
-        }"
-      ></ng-container>
-      <ng-container
-        [ngTemplateOutlet]="error"
-        [ngTemplateOutletContext]="{
-          control: loginForm.get('password'),
-          error: 'minlength',
-          msg: '* length should be greater than 2'
-        }"
-      ></ng-container>
-    </div>
-  </div>
-
-  <div class="mb-3">
-    <label for="country" class="form-label">Country</label>
-    <select class="form-control" id="country" formControlName="country">
-      <option [value]="null" disabled selected>Select Country</option>
-      <option *ngFor="let country of countries" [value]="country.CountryID">
-        {{ country.CountryName }}
-      </option>
-    </select>
-    <div
-      *ngIf="
-        loginForm.get('country')?.invalid && loginForm.get('country')?.touched
-      "
-      class="text-danger"
-    >
-      <ng-container
-        [ngTemplateOutlet]="error"
-        [ngTemplateOutletContext]="{
-          control: loginForm.get('country'),
-          error: 'required',
-          msg: '*Required'
-        }"
-      ></ng-container>
-    </div>
-  </div>
-
-  <div class="mb-3">
-    <label for="city" class="form-label">City</label>
-    <select class="form-control" id="city" formControlName="city">
-      <option [value]="null" disabled selected>Select City</option>
-      <option *ngFor="let city of citiesDd" [value]="city.CityID">
-        {{ city.CityName }}
-      </option>
-    </select>
-    <div
-      *ngIf="loginForm.get('city')?.invalid && loginForm.get('city')?.touched"
-      class="text-danger"
-    >
-      <ng-container
-        [ngTemplateOutlet]="error"
-        [ngTemplateOutletContext]="{
-          control: loginForm.get('city'),
-          error: 'required',
-          msg: '*Required'
-        }"
-      ></ng-container>
-    </div>
-  </div>
-
-  <button type="submit" class="btn btn-primary">Login</button>
-</form>
-
-<div>
-  {{ loginForm.value | json }}
-</div>
-<div>
-  USER ERROR : <code>{{ loginForm.get("username")?.errors | json }}</code>
-  <br />
-  PASSWORD ERROR : <code>{{ loginForm.get("password")?.errors | json }}</code>
-  <br />
-  COUNTRY ERROR : <code>{{ loginForm.get("country")?.errors | json }}</code>
-  <br />
-  CITY ERROR : <code>{{ loginForm.get("city")?.errors | json }}</code>
-</div>
-
-<ng-template #error let-control="control" let-error="error" let-msg="msg">
-  <div
-    *ngIf="
-      control &&
-      control?.touched &&
-      control?.invalid &&
-      control?.errors &&
-      control?.errors[error]
-    "
-    class="text-danger"
-  >
-    {{ msg }}
-  </div>
-</ng-template>
+<ngx-ui-loader></ngx-ui-loader>
+<router-outlet></router-outlet>
