--- a/src/app/form1/form1.component.html
+++ b/src/app/form1/form1.component.html
@@ -33,7 +33,7 @@
   </div>
 
   <div class="mb-3">
-    <label for="password" class="form-label">Password</label>
+    <label for="password" class="form-label">Passwords</label>
     <input
       type="password"
       class="form-control"
