--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,28 +1,47 @@
-<h2>Login</h2>
-<form [formGroup]="loginForm" class="login-form" (ngSubmit)="onSubmit()">
-  <mat-form-field>
-    <input matInput placeholder="Username" formControlName="username" />
-    <mat-error *ngIf="loginForm.get('username')?.hasError('required')">
-      Username is required
-    </mat-error>
-  </mat-form-field>
-  <mat-form-field>
-    <input
-      matInput
-      type="password"
-      placeholder="Password"
-      formControlName="password"
-    />
-    <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
-      Password is required
-    </mat-error>
-  </mat-form-field>
-  <button
-    mat-raised-button
-    color="primary"
-    type="submit"
-    [disabled]="loginForm.invalid"
-  >
-    Login
-  </button>
-</form>
+<div class="max-w-md mx-auto">
+  <h2 class="text-2xl font-bold mb-4">Login</h2>
+  <form [formGroup]="loginForm" class="login-form" (ngSubmit)="onSubmit()">
+    <div class="mb-4">
+      <label for="username" class="block text-gray-700">Username</label>
+      <input
+        id="username"
+        matInput
+        placeholder="Username"
+        formControlName="username"
+        class="mt-1 p-2 w-full border rounded-md"
+      />
+      <p
+        class="text-red-500 text-xs italic"
+        *ngIf="loginForm.get('username')?.hasError('required')"
+      >
+        Username is required
+      </p>
+    </div>
+    <div class="mb-4">
+      <label for="password" class="block text-gray-700">Password</label>
+      <input
+        id="password"
+        matInput
+        type="password"
+        placeholder="Password"
+        formControlName="password"
+        class="mt-1 p-2 w-full border rounded-md"
+      />
+      <p
+        class="text-red-500 text-xs italic"
+        *ngIf="loginForm.get('password')?.hasError('required')"
+      >
+        Password is required
+      </p>
+    </div>
+    <button
+      mat-raised-button
+      color="primary"
+      type="submit"
+      [disabled]="loginForm.invalid"
+      class="bg-blue-500 text-white p-2 rounded-md"
+    >
+      Login
+    </button>
+  </form>
+</div>
